--- a/app/src/main/res/layout/recipe.xml
+++ b/app/src/main/res/layout/recipe.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="10dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textColor="#546526"
+        android:textColor="@color/apptext"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginTop="5dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textColor="#546526"
+        android:textColor="@color/apptext"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
