--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
          <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
          <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@drawable/mainphoto</item>
     </style>
 
     <style name="Theme.CookIt" parent="Base.Theme.CookIt" />
