--- a/app/src/main/res/layout/kitchen.xml
+++ b/app/src/main/res/layout/kitchen.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
     android:layout_height="50dp"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:layout_gravity="center_horizontal">
 
     <Button
         android:id="@+id/button"
