--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,21 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/nav_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home" />
+        android:title="@string/nav_title_home" />
     <item
-        android:id="@+id/fav"
+        android:id="@+id/nav_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@drawable/baseline_favorite_24"
-        android:title="Fav" />
+        android:icon="@drawable/baseline_add_24"
+        android:title="@string/nav_title_add" />
     <item
-        android:id="@+id/profile"
+        android:id="@+id/nav_about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@drawable/baseline_person_24"
-        android:title="Profile" />
+        android:icon="@drawable/baseline_info_24"
+        android:title="@string/nav_title_about" />
 </menu>
