--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="apptext">#546526</color>
     <color name="appbar">#546526</color>
+    <color name="applight">#A2B578</color>
 </resources>
