--- a/app/src/main/res/layout/kitchen_button.xml
+++ b/app/src/main/res/layout/kitchen_button.xml
@@ -8,13 +8,11 @@
     android:layout_gravity="center_horizontal">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/kitchen_button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Button"
         app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
